@@ -1,3 +1,8 @@
+2007-05-16  Denis Washington  <denisw@svn.nome.org>
+
+	* appearance-desktop.c: (desktop_init): re-enable drag-and-drop for the
+	wallpaper list.
+
 2007-05-14  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance.glade: fix button order, remove redundant receives_default,
